syntax = "proto3";

package cubicmc;

message Settings {
    string username = 1;
    string gamedir = 2;
    string theme = 3;
    string java8 = 4;
    string java17 = 5;
    string java21 = 6;
    bool autoupdate = 7;
    int32 minMem = 8;
    int32 maxMem = 9;
}
